Fixed issues with project card on small devices

--- a/stylesheets/mediaqueries.css
+++ b/stylesheets/mediaqueries.css
@@ -74,3 +74,9 @@
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 576px) {
+    .project-card {
+        width: 100%;
+    }
+}
